# sora-python-sdk

./: .env.template  .gitignore  AGENTS.md  CHANGES.jetson-jetpack-6.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  DEPS  MANIFEST.in  NOTICE.md  Pipfile  README.md  VERSION  buildbase.py  canary.py  fix_nanobind_nb_func.patch  install_deps.py  package.ubuntu-20.04_armv8_jetson.sh  pypath.py  pyproject.toml  repro-disconnection.py  requiements.txt  run.py  setup.py  test_with_llvm.py
.github/: dependabot.yml  renovate.json
.github/actions/download/: action.yml
.github/actions/download-openh264/: action.yml
.github/actions/download-whl/: action.yml
.github/actions/slack-notify-failed/: action.yml
.github/actions/slack-notify-succeeded/: action.yml
.github/workflows/: build-debug.yml  build-relwithdebinfo.yml  build.yml  e2e-test-amd-amf.yml  e2e-test-amf.yml  e2e-test-apple-video-toolbox.yml  e2e-test-debug.yml  e2e-test-intel-vpl.yml  e2e-test-nvidia-video-codec-sdk.yml  e2e-test-only.yml  e2e-test-openh264.yml  e2e-test-tc.yml  e2e-test-vcn.yml  e2e-test-vpl.yml  e2e-test.yml  examples-e2e-test.yml  pkg-e2e-test.yml  repro-test.yml  test.yml  vpl-e2e-test.yml
examples/: .env.template  .gitignore  README.md  pyproject.toml  sumomo.py  sync.sh
examples/hideface_sender/: README.md  hideface_sender.py  requirements.txt
examples/recvonly/: README.md  recvonly.py  requirements.txt
examples/sendonly/: README.md  sendonly.py
examples/src/: hideface_sender.py  media_recvonly.py  media_sendonly.py  messaging.py
examples/src/media/: __init__.py  recvonly.py  sendonly.py  vad.py
examples/src/messaging/: __init__.py  recvonly.py  sendonly.py  sendrecv.py
examples/src/ml/: hideface_sender.py
examples/tests/: conftest.py  test_macos.py  test_messaging.py  test_messaging_sendonly.py  test_openh264.py  test_sendonly_recvonly.py  test_sendrecv.py  test_signaling_message.py  test_simulcast.py  test_switched.py  test_vad.py
examples/whisper/: README.md  whisper.py
multistrap/: raspberry-pi-os_armv8.conf  ubuntu-20.04_armv8_jetson.conf  ubuntu-22.04_armv8.conf  ubuntu-22.04_armv8_jetson.conf  ubuntu-24.04_armv8.conf
scripts/: fix_shared_lib.sh  package.ubuntu-20.04_armv8_jetson.sh  package.ubuntu-22.04_armv8_jetson.sh  pytest_memory_leak_checker.py  pytest_with_llvm.py
src/: dispose_listener.h  dummy_audio_mixer.cpp  dummy_audio_mixer.h  dynamic_h264_decoder.cpp  dynamic_h264_decoder.h  dynamic_h264_encoder.cpp  dynamic_h264_encoder.h  gil.h  sora.cpp  sora.h  sora_audio_sink.cpp  sora_audio_sink.h  sora_audio_sink2.cpp  sora_audio_sink2.h  sora_audio_source.cpp  sora_audio_source.h  sora_audio_stream_sink.cpp  sora_audio_stream_sink.h  sora_call.h  sora_connection.cpp  sora_connection.h  sora_factory.cpp  sora_factory.h  sora_frame_transformer.h  sora_log.cpp  sora_log.h  sora_rtp_receiver.h  sora_sdk_ext.cpp  sora_track_interface.h  sora_vad.cpp  sora_vad.h  sora_video_sink.cpp  sora_video_sink.h  sora_video_source.cpp  sora_video_source.h
src/sora_sdk/: __init__.py
src/sora_sdk/model_coeffs/: .gitkeep
test/: client.py  messaging-recvonly.py  messaging-sendonly.py  messaging-sendrecv.py  messaging_recvonly.py  messaging_sendonly.py  messaging_sendrecv.py  recvonly.py  sendonly.py
tests/: README.md  api.py  cli.py  client.py  conftest.py  fake_video_blend2d.py  simulcast.py  test_abort.py  test_amd_amf.py  test_amd_vcn.py  test_apple_video_toolbox.py  test_authz.py  test_authz_simulcast.py  test_ca_cert.py  test_capability.py  test_ci.py  test_codec_preference.py  test_degradation_preference.py  test_disconnect.py  test_encoded_transform.py  test_h264_sei.py  test_intel_vpl.py  test_intel_vpl_av1.py  test_intel_vpl_decoder_av1.py  test_key_frame_request.py  test_macos.py  test_macos_h264.py  test_macos_h265.py  test_memory_leak.py  test_messaging.py  test_messaging_header.py  test_nvidia_video_codec.py  test_nvidia_video_codec_sdk.py  test_openh264.py  test_openh264_sei.py  test_openh264_simulcast.py  test_opus.py  test_pass.py  test_raspberry_pi.py  test_re_offer_re_answer_sdp.py  (+20 more)
