[project]
name = "sora_sdk"
authors = [{ name = "Shiguredo Inc.", email = "contact+pypi@shiguredo.jp" }]
version = "2025.2.2"
description = "WebRTC SFU Sora Python SDK"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.11"

[project.urls]
Source = "https://github.com/shiguredo/sora-python-sdk"
Documentation = "https://sora-python-sdk.shiguredo.jp"
Discord = "https://discord.gg/shiguredo"

[build-system]
requires = ["setuptools==80.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-preference = "only-managed"
dev-dependencies = [
    "nanobind==2.7.0",
    "setuptools==80.0",
    "build==1.2.2.post1",
    "wheel==0.45.1",
    "typing-extensions",
    "python-dotenv",
    "numpy",
    "httpx",
    "pytest",
    "ruff",
    "mypy",
    "pyjwt",
    "pytest-repeat",
    "psutil",
]

[tool.ruff]
target-version = "py311"
line-length = 100


[tool.pytest.ini_options]
xfail_strict = true
