[project]
name = "sora_sdk"
authors = [{ name = "Shiguredo Inc.", email = "contact+pypi@shiguredo.jp" }]
dynamic = ["version"]
description = "WebRTC SFU Sora Python SDK"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">= 3.11"

[project.urls]
Source = "https://github.com/shiguredo/sora-python-sdk"
Documentation = "https://sora-python-sdk.shiguredo.jp"
Discord = "https://discord.gg/shiguredo"

[build-system]
requires = ["setuptools==80.9", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["nanobind==2.9.2", "setuptools==80.9.0", "ruff", "ty"]
test = ["pytest", "pytest-repeat", "pytest-xdist", "numpy", "httpx", "pyjwt"]
lint = ["ruff", "ty"]

[tool.uv]
python-preference = "only-managed"
default-groups = ["dev", "test", "lint"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ty.src]
include = ["src", "tests"]

[tool.pytest.ini_options]
xfail_strict = true
