[project]
name = "sora-sdk-samples"
version = "2024.3.0"
description = "Sora Python SDK Samples"
authors = [{ name = "Shiguredo Inc." }]
dependencies = [
    "opencv-python~=4.10.0.84",
    "opencv-python-headless~=4.10.0.84",
    "sounddevice~=0.4.7",
    "sora-sdk>=2024.3.0",
    "mediapipe~=0.10.14",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
media_sendonly = "media.sendonly:sendonly"
media_recvonly = "media.recvonly:recvonly"
messaging_sendrecv = "messaging.sendrecv:sendrecv"
messaging_sendonly = "messaging.sendonly:sendonly"
messaging_recvonly = "messaging.recvonly:recvonly"
hideface_sender = "ml.hideface_sender:hideface_sender"

[build-system]
requires = ["hatchling", "setuptools>=69.2"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5",
    "mypy>=1.10.0",
    "pytest>=8.3",
    "setuptools>=69.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/media", "src/messaging", "src/ml"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
