[project]
name = "sora-python-sdk-examples"
version = "0.0.0"
description = "Examples for Sora Python SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
]

[tool.uv.sources]
sora_sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]